@@ -4,6 +4,7 @@ gnome-initial-setup (3.26.0-2) UNRELEASED; urgency=medium
   * Update Vcs fields for conversion to git
   * Add debian/gbp.conf
   * Bump Standards-Version to 4.1.2
+  * Bump debhelper compat to 11
 
  -- Jeremy Bicha <jbicha@debian.org>  Mon, 18 Sep 2017 07:50:20 -0400
 
